# block-seek

./: pyproject.toml
src/block-seek/: main.py
src/block-seek/agent/: core.py  prompts.py
src/block-seek/config/: settings.py
src/block-seek/knowledge_base/: blockchain-kb.md  defi-kb.md  nft-kb.md  tokens-kb.md
src/block-seek/tools/: base.py  defi.py  knowledge.py  nft.py  token.py  wallet.py
src/block-seek/utils/: api.py  blockchain.py  visualization.py
